ajustes de comportamiento y requisitos de examen, junto con el websocket, en adicion se suman mejoras al mismo junto con mejoras en el examen
